Support any filter combination (including empty)
